# NawiXen-Ai

./: README.md  package.json
ai-engine/: main.py  pyproject.toml
ai-engine/services/: __init__.py  anomaly_detector.py  demand_forecaster.py  eta_predictor.py  route_optimizer.py
backend/: package.json
backend/src/: index.ts
backend/src/config/: database.ts
backend/src/middleware/: auth.ts  error.ts
backend/src/models/: index.ts
backend/src/routes/: ai.ts  analytics.ts  auth.ts  drivers.ts  orders.ts  payments.ts  routes.ts
backend/src/services/: osrm.ts
backend/src/websocket/: server.ts
components/dashboard/: dashboard-chart.tsx  quick-actions.tsx  recent-activity.tsx  sidebar.tsx
components/maps/: tracking-map.tsx
components/routes/: route-builder.tsx
mobile/: App.tsx  app.json  package.json
mobile/src/: config.ts
mobile/src/context/: AuthContext.tsx  LocationContext.tsx
mobile/src/screens/auth/: LoginScreen.tsx
mobile/src/screens/main/: DeliveriesScreen.tsx  HomeScreen.tsx  ProfileScreen.tsx  RouteScreen.tsx
